--- a/Lesson10/style.css
+++ b/Lesson10/style.css
@@ -1,5 +1,5 @@
 body{
-    background: rgba(11, 11, 54, 0.301);
+    background: rgba(58, 126, 52, 0.301);
 }
 #navbar{
     list-style-type: none;
@@ -55,14 +55,14 @@ ul li:hover ul {
 .container{
   display: grid;
   grid-template-columns: 100px repeat(3, 1fr) 100px;
-  grid-template-rows: 100px 200px 220px 1fr 100px;
+  grid-template-rows: 100px 200px 220px 220px 220px 100px;
 }
 
 .section0{
     border: 2px solid black;
     grid-column: 2/5;
     grid-row: 2/3;
-    background-image: url("../Lesson10/images/section0.jpeg");
+    background-image: url("../Lesson10/images/dyk.jpeg");
 }
 
 .section0 p{
@@ -81,41 +81,95 @@ ul li:hover ul {
   border: 2px solid black;
   grid-column: 2/3;  
   grid-row: 3/4;
+  background-image: url("../Lesson10/images/compost.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover
 }
 .section1img{
+    border: 2px solid black;
     grid-column: 2/3;
     grid-row: 4/5;
+    background-image: url("../Lesson10/images/bulbs.jpeg") ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
 }
 .section2{
   border: 2px solid black;
   grid-column: 3/4;
   grid-row: 3/4;
+  background-image: url("../Lesson10/images/herbs.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover
 }
 .section2img{
+    border: 2px solid black;
     grid-column: 3/4;
     grid-row: 4/5;
+    background-image: url("../Lesson10/images/cactus.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
 }
 .section3{
   border: 2px solid black;
   grid-column: 4/5;
   grid-row: 3/4;
+  background-image: url("../Lesson10/images/tree.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover
 }
 .section3img{
+    border: 2px solid black;
     grid-column: 4/5;
     grid-row: 4/5;
+    background-image: url("../Lesson10/images/tools.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+}
+.section4{
+    border: 2px solid black;
+    grid-column: 2/3;
+    grid-row: 5/6;
+    background-image: url("../Lesson10/images/annuals.jpg") ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+}
+.section5{
+    border: 2px solid black;
+    grid-column: 3/4;
+    grid-row: 5/6;
+    background-image: url("../Lesson10/images/roses.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+}
+.section6{
+    border: 2px solid black;
+    grid-column: 4/5;
+    grid-row: 5/6;
+    background-image: url("../Lesson10/images/shrubs.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
 }
 
 .header{
   grid-column: 1/6;
-  background:url("../Lesson10/images/footer.jpeg");
+  background:url("../Lesson10/images/leaf.jpg");
   color: white;
 }
 
 .footer{
   color: white;
   grid-column: 1/7;
-  grid-row: 5/6;
-  background-image: url("../Lesson10/images/footer.jpeg");
+  grid-row: 7/8;
+  background-image: url("../Lesson10/images/leaf.jpg");
 }
 
 img{
@@ -126,7 +180,6 @@ img{
 @media screen and (max-width: 500px){
 
     body{
-        background:white;
         margin: auto;
     }
     header{
@@ -134,42 +187,59 @@ img{
         grid-column: 1/2;
     }
     .section0{
-        grid-row: 2/3;
+        grid-row: 1/2;
         grid-column: 1/6;
+    }
+    .section0 h1{
+        font-size: 15px;
     }
     .section0 p{
         display: none;
     }
     .section1{
-        grid-column: 1/6;
-        grid-row: 3/4;
+        grid-column: 1/2;
+        grid-row: 2/3;
     }
     .section2{
-        grid-column: 1/6;
-        grid-row: 4/5;
+        grid-column: 2/3;
+        grid-row: 2/3;
     }
     .section2img{
-        grid-column: 1/6;
-        grid-row: 5/6;
+        grid-column: 2/3;
+        grid-row: 3/4;
     }
     .section3{
-        grid-column: 1/6;
-        grid-row: 5/6;
+        grid-column: 1/2;
+        grid-row: 3/4;
+        text-align: center;
     }
     .section3img{
-        grid-column: 1/6;
-        grid-row: 6/7;
+        grid-column: 1/2;
+        grid-row: 4/6;
     }
     .section1img{
-        grid-column: 1/6;
+        grid-column: 2/3;
         grid-row: 4/5;
+    }
+    .section4{
+        grid-column: 1/2;
+        grid-row: 6/7
+    }
+    .section5{
+        grid-column: 2/3;
+        grid-row: 6/7;
+    }
+    .section6{
+        grid-column: 2/3;
+        grid-row: 5/6;
     }
     .container{
         margin: 0 20px;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 60px 100px repeat(3, 160px) 100px;
+        grid-template-rows: 60px repeat(6, 160px) 100px;
       }
+
       img{
           display: none;
           width: 50%;
@@ -178,7 +248,84 @@ img{
       }
       .footer{
         grid-column: 1/6;
-        grid-row: 6/7;
+        grid-row: 7/8;
         border: 2px solid black;
       }
+      
+      header{
+        background:url("../Lesson10/images/leaf.jpg");
+        color: white;
+        height: 150px;
+        width: 100%;
+      }
+
+      header h1{
+          text-align: center;
+          padding-top: 5%;
+      }
+      #nav-list{
+        background-image: url("../Lesson10/images/leaf.jpg");
+        border: 2px solid black;
+        color: white;
+        width: auto;
+    }
+    .header{
+        display:none;
+    }
+    
+    .section0 p{
+        display:none;
+    }
+    .container h3, p{
+        background-color:  rgba(58, 126, 52, 0.5);
+        color: white;
+        font-size: 15px;
+    }
+    }
+
+@media screen and (min-width: 500px){
+    .parallax {
+        background-image: url("../Lesson10/images/treeroots.jpeg");
+        min-height: 250px; 
+      
+        /* Create the parallax scrolling effect */
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      header{
+        background:url("../Lesson10/images/leaf.jpg");
+        color: white;
+        height: 150px;
+        width: 100%;
+      }
+
+      header h1{
+          text-align: center;
+          padding-top: 5%;
+      }
+      #nav-list{
+        background-image: url("../Lesson10/images/leaf.jpg");
+        border: 2px solid black;
+        color: white;
+        width: auto;
+    }
+    .section0{
+        background-image: url("../Lesson10/images/dyk.jpeg");
+        background-position: center top;
+    }
+
+    .section0 p{
+        background-image: none;
+    }
+
+    .container{
+        overflow: scroll;
+        color: white;
+    }
+    .container p{
+        background-color:  rgba(58, 126, 52, 0.5);
+    }
+     
 }
